<resources>
    <string name="app_name">Derpy</string>

    <string name="activity_main">Derpibooru</string>
    <string name="activity_search">Search</string>

    <!-- search -->
    <string name="text_search">Search</string>
    <string name="search_sort_by">Sort by</string>
    <string-array name="search_sort_by_options">
        <item>Creation date</item>
        <item>Score</item>
        <item>Relevance</item>
        <item>Width</item>
        <item>Height</item>
        <item>Comments</item>
        <item>Random!</item>
    </string-array>
    <string name="search_sort_direction">Sorting\ndirection</string>
    <string-array name="search_sort_direction_options">
        <item>Descending</item>
        <item>Ascending</item>
    </string-array>
    <string name="search_faves">Filter my\nfavorites</string>
    <string-array name="search_faves_options">
        <item>No</item>
        <item>Show my faves only</item>
        <item>Don\'t show my faves</item>
    </string-array>
    <string name="search_upvotes">Filter my\nupvotes</string>
    <string-array name="search_upvotes_options">
        <item>No</item>
        <item>Show my upvotes only</item>
        <item>Don\'t show my upvotes</item>
    </string-array>
    <string name="search_uploads">Filter my\nuploads</string>
    <string-array name="search_uploads_options">
        <item>No</item>
        <item>Show my uploads only</item>
        <item>Don\'t show my uploads</item>
    </string-array>
    <string name="search_watched_tags">Filter my\nwatched tags</string>
    <string-array name="search_watched_tags_options">
        <item>No</item>
        <item>Show my watched tags only</item>
        <item>Don\'t show my watched tags</item>
    </string-array>
    <string name="search_min_score">Minimum\nscore</string>
    <string name="search_max_score">Maximum\nscore</string>

    <string name="action_settings">Settings</string>
</resources>
