<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    <derpibooru.derpy.ui.views.FloatingSearchView
        android:id="@+id/floatingSearchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_below="@id/floatingSearchView">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="50dp"
            android:paddingRight="50dp">
            <TableRow
                android:layout_weight="3.5"
                android:gravity="center">
                <TextView
                    android:layout_height="48dp"
                    android:layout_width="0dp"
                    android:layout_weight="1.5"
                    android:text="@string/search_sort_by"
                    android:gravity="center"
                    android:textSize="16dp"/>
                <Spinner
                    android:layout_height="48dp"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:id="@+id/spinnerSortBy"
                    android:entries="@array/search_sort_by_options"
                    android:gravity="center"
                    style="@style/Spinner"
                    android:spinnerMode="dropdown"/>
            </TableRow>
            <TableRow
                android:layout_weight="3.5"
                android:gravity="center">
                <TextView
                    android:layout_height="48dp"
                    android:layout_width="0dp"
                    android:layout_weight="1.5"
                    android:text="@string/search_sort_direction"
                    android:gravity="center"
                    android:textSize="16dp"/>
                <Spinner
                    android:layout_height="48dp"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:id="@+id/spinnerSortDirection"
                    android:entries="@array/search_sort_direction_options"
                    android:gravity="center"
                    style="@style/Spinner"
                    android:spinnerMode="dropdown"/>
            </TableRow>
            <TableRow
                android:layout_weight="3.5"
                android:gravity="center">
                <TextView
                    android:layout_height="48dp"
                    android:layout_width="0dp"
                    android:layout_weight="1.5"
                    android:text="@string/search_faves"
                    android:gravity="center"
                    android:textSize="16dp"/>
                <Spinner
                    android:layout_height="48dp"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:id="@+id/spinnerFavesFilter"
                    android:entries="@array/search_faves_options"
                    android:gravity="center"
                    style="@style/Spinner"
                    android:spinnerMode="dropdown"/>
            </TableRow>
            <TableRow
                android:layout_weight="3.5"
                android:gravity="center">
                <TextView
                    android:layout_height="48dp"
                    android:layout_width="0dp"
                    android:layout_weight="1.5"
                    android:text="@string/search_upvotes"
                    android:gravity="center"
                    android:textSize="16dp"/>
                <Spinner
                    android:layout_height="48dp"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:id="@+id/spinnerUpvotesFilter"
                    android:entries="@array/search_upvotes_options"
                    android:gravity="center"
                    style="@style/Spinner"
                    android:spinnerMode="dropdown"/>
            </TableRow>
            <TableRow
                android:layout_weight="3.5"
                android:gravity="center">
                <TextView
                    android:layout_height="48dp"
                    android:layout_width="0dp"
                    android:layout_weight="1.5"
                    android:text="@string/search_uploads"
                    android:gravity="center"
                    android:textSize="16dp"/>
                <Spinner
                    android:layout_height="48dp"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:id="@+id/spinnerUploadsFilter"
                    android:entries="@array/search_uploads_options"
                    android:gravity="center"
                    style="@style/Spinner"
                    android:spinnerMode="dropdown"/>
            </TableRow>
            <TableRow
                android:layout_weight=".53"
                android:gravity="center">
                <TextView
                    android:layout_height="48dp"
                    android:layout_width="0dp"
                    android:layout_weight="1.5"
                    android:text="@string/search_watched_tags"
                    android:gravity="center"
                    android:textSize="16dp"/>
                <Spinner
                    android:layout_height="48dp"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:id="@+id/spinnerWatchedTagsFilter"
                    android:entries="@array/search_watched_tags_options"
                    android:gravity="center"
                    style="@style/Spinner"
                    android:spinnerMode="dropdown"/>
            </TableRow>
            <TableRow
                android:layout_weight="3.5"
                android:gravity="center">
                <TextView
                    android:layout_height="48dp"
                    android:layout_width="0dp"
                    android:layout_weight="1.5"
                    android:text="@string/search_min_score"
                    android:gravity="center"
                    android:textSize="16dp"/>
                <EditText
                    android:layout_height="48dp"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:id="@+id/textMinScore"
                    android:gravity="center"
                    android:inputType="number"/>
            </TableRow>
            <TableRow
                android:layout_weight="3.5"
                android:gravity="center">
                <TextView
                    android:layout_height="48dp"
                    android:layout_width="0dp"
                    android:layout_weight="1.5"
                    android:text="@string/search_max_score"
                    android:gravity="center"
                    android:textSize="16dp"/>
                <EditText
                    android:layout_height="48dp"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:id="@+id/textMaxScore"
                    android:gravity="center"
                    android:inputType="number"/>
            </TableRow>
        </TableLayout>
    </ScrollView>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/buttonSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_search_white_24dp"
        app:backgroundTint="@color/colorAccent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"/>
</RelativeLayout>