<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!-- sort by -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2.5"
                android:gravity="center"
                android:padding="5dp">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/search_sort_by"
                    android:gravity="center"
                    android:textSize="16dp"/>
                <Spinner
                    android:id="@+id/spinnerSortBy"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="48dp"
                    android:gravity="center"
                    style="@style/Spinner"
                    android:spinnerMode="dropdown"/>
            </LinearLayout>
            <!-- sort direcion -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2.5"
                android:gravity="center"
                android:padding="5dp">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/search_sort_direction"
                    android:gravity="center"
                    android:textSize="16dp"/>
                <Spinner
                    android:id="@+id/spinnerSortDirection"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="48dp"
                    android:gravity="center"
                    style="@style/Spinner"
                    android:spinnerMode="dropdown"/>
            </LinearLayout>
            <!-- favorites filter -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2.5"
                android:gravity="center"
                android:padding="5dp">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/search_faves"
                    android:gravity="center"
                    android:textSize="16dp"/>
                <Spinner
                    android:id="@+id/spinnerFavesFilter"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="48dp"
                    android:gravity="center"
                    style="@style/Spinner"
                    android:spinnerMode="dropdown"/>
            </LinearLayout>
            <!-- upvotes filter -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2.5"
                android:gravity="center"
                android:padding="5dp">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/search_upvotes"
                    android:gravity="center"
                    android:textSize="16dp"/>
                <Spinner
                    android:id="@+id/spinnerUpvotesFilter"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="48dp"
                    android:gravity="center"
                    style="@style/Spinner"
                    android:spinnerMode="dropdown"/>
            </LinearLayout>
            <!-- uploads filter -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2.5"
                android:gravity="center"
                android:padding="5dp">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/search_uploads"
                    android:gravity="center"
                    android:textSize="16dp"/>
                <Spinner
                    android:id="@+id/spinnerUploadsFilter"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="48dp"
                    android:gravity="center"
                    style="@style/Spinner"
                    android:spinnerMode="dropdown"/>
            </LinearLayout>
            <!-- watched tags filter -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2.5"
                android:gravity="center"
                android:padding="5dp">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/search_watched_tags"
                    android:gravity="center"
                    android:textSize="16dp"/>
                <Spinner
                    android:id="@+id/spinnerWatchedTagsFilter"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="48dp"
                    android:gravity="center"
                    style="@style/Spinner"
                    android:spinnerMode="dropdown"/>
            </LinearLayout>
            <!-- minimum score -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2.5"
                android:gravity="center"
                android:padding="5dp">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/search_min_score"
                    android:gravity="center"
                    android:textSize="16dp"/>
                <EditText
                    android:id="@+id/textMinScore"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="48dp"
                    android:gravity="center"
                    android:inputType="number"/>
            </LinearLayout>
            <!-- maximum score -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2.5"
                android:gravity="center"
                android:padding="5dp">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/search_max_score"
                    android:gravity="center"
                    android:textSize="16dp"/>
                <EditText
                    android:id="@+id/textMaxScore"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="48dp"
                    android:gravity="center"
                    android:inputType="number"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>